# Quiz

./: CMakeLists.txt  README.md
Quiz/: CMakeLists.txt
Quiz/forms/: WMainWindow.ui  WQuestion.ui
Quiz/include/: Data.h  Image.h  QuestionsModel.h  Util.h  WImageViewer.h  WMainWindow.h  WQuestion.h
Quiz/src/: Data.cpp  Image.cpp  QuestionsModel.cpp  Util.cpp  WImageViewer.cpp  WMainWindow.cpp  WQuestion.cpp  main.cpp
